@@ -1,4 +1,11 @@
 0.2.5
+- Added a "decorator" kw argument to <%def>,
+  allows custom decoration functions to wrap
+  rendering callables.  Mainly intended for
+  custom caching algorithms, not sure what
+  other uses there may be (but there may be).
+  Examples are in the "filtering" docs.
+  
 - Added last_modified accessor to Template,
   returns the time.time() when the module
   was created. [ticket:97]
